intTests/test_parse_errors/parser008.log.good
Loading file "parser008.saw"
parser008.saw:7:1-7:7: Error: Syntax error: missing ';'
FAILED
